fix bug url image meta

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,18 +7,18 @@
 
     <meta itemprop="name" content="<%= name %>">
     <meta itemprop="description" content="<%= desc %>">
-    <meta itemprop="image" content="https://<%= domain %>/favicon.jpg">
+    <meta itemprop="image" content="<%= domain %>/favicon.png">
 
     <meta property="og:url" content="<%= link %>">
     <meta property="og:type" content="website">
     <meta property="og:title" content="<%= name %>">
     <meta property="og:description" content="<%= desc %>">
-    <meta property="og:image" content="https://<%= domain %>/favicon.jpg">
+    <meta property="og:image" content="<%= domain %>/favicon.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="<%= name %>">
     <meta name="twitter:description" content="<%= desc %>">
-    <meta name="twitter:image" content="https://<%= domain %>/favicon.jpg">
+    <meta name="twitter:image" content="<%= domain %>/favicon.png">
 
     <title><%= name %></title>
     <style>
